--- a/gradle.properties
+++ b/gradle.properties
@@ -3,18 +3,31 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 minecraft_major_version=1.19
-minecraft_version=1.19.3
-yarn_build=2:v2
-loader_version=0.14.11
+minecraft_version=1.19.4
+yarn_build=1:v2
+loader_version=0.14.17
 # Mod Properties
 mod_id=mousewheelie
 mod_version=1.10.7
 mod_release=release
-mod_mc_version_specifier=1.19.3+
-mod_mc_versions=1.19.3
+mod_mc_version_specifier=1.19.4+
+mod_mc_versions=1.19.4
 maven_group=de.siphalor
 archives_base_name=mousewheelie
 # Dependencies
-amecs_version=1.3.7+mc1.19.3
-coat_version=1.0.0-beta.19+mc1.19.3
-fabric_api_version=0.68.1+1.19.3
+amecs_version=1.3.9+mc1.19.4
+coat_version=1.0.0-beta.19+mc1.19.4
+fabric_api_version=0.76.0+1.19.4
+tweed_annotated=1.3.1+mc1.19.4
+tweed_base=1.7.1+mc1.19.4
+tweed_data=1.2.1+mc1.19.4
+tweed_data_gson=1.1.0+mc1.19.4
+tweed_data_hjson=1.1.1+mc1.19.4
+tweed_data_jankson=1.1.1+mc1.19.4
+tweed_data_xml=1.1.0+mc1.19.4
+tweed_data_yaml=1.1.1+mc1.19.4
+tweed_tailor_cloth=1.0.3+mc1.19.4
+tweed_tailor_coat=1.1.3+mc1.19.4
+tweed_tailor_json_schema=1.0.1+mc1.19.4
+tweed_tailor_screen=1.1.4+mc1.19.4
+tweeed_testmod=0.1.0+mc1.19.4
